syntax = "proto3";
package heimdall.clerk.v1beta1;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/maticnetwork/heimdall/x/clerk/types";

option (gogoproto.marshaler_all)   = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.sizer_all)       = true;

message EventRecord {
    option (gogoproto.goproto_getters) = false;

    uint64 id = 1
        [(gogoproto.jsontag) = "id", (gogoproto.moretags) = "yaml:\"id\""];
    string                    contract    = 2 [(gogoproto.casttype) =
                             "github.com/cosmos/cosmos-sdk/types.AccAddress"];
    bytes                     data        = 3;
    google.protobuf.Timestamp record_time = 4 [
        (gogoproto.stdtime)  = true,
        (gogoproto.nullable) = false,
        (gogoproto.moretags) = "yaml:\"record_time\""
    ];
    uint64 log_index = 5;
    bytes  tx_hash   = 6;
    string chain_id  = 7;
}
